--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.github.oboehm</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>jar</packaging>
-  <version>0.9.0-SNAPSHOT</version>
+  <version>0.9.0</version>
   <name>GDV-Xport</name>
   <url>http://www.aosd.de/gdv.xport/</url>
   <organization>
@@ -414,9 +414,6 @@
       <roles>
         <role>Java Developer</role>
       </roles>
-      <properties>
-        <picUrl>http://www.gravatar.com/avatar/10982fe9f768dee9f53b1e48db9dad38.png</picUrl>
-      </properties>
     </developer>
     <developer>
       <name>Ralf Klemmer</name>
