--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,10 @@
   </licenses>
 
   <properties>
-    <patterntesting.version>1.3.0</patterntesting.version>
+    <patterntesting.version>1.4.0</patterntesting.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.6</java.version>
+    <main.class>gdv.xport.Main</main.class>
   </properties>
 
   <build>
@@ -61,10 +62,33 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>gdv.xport.Main</mainClass>
+              <mainClass>${main.class}</mainClass>
             </manifest>
           </archive>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.2</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+            <finalName>${project.artifactId}-${project.version}-uberjar</finalName>
+              <transformers>
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>${main.class}</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
 
       <!--
