--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,4 +10,5 @@ encoding//src/test/resources/Bender_Leben.GDV=ISO-8859-1
 encoding//src/test/resources/gdv/xport/config/umlaute.txt=ISO-8859-1
 encoding//src/test/resources/igor_110120.txt=ISO-8859-1
 encoding//src/test/resources/musterdatei_041222.txt=ISO-8859-1
+encoding//src/test/resources/zwei_datenpakete.txt=ISO-8859-1
 encoding/<project>=UTF-8
