--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,9 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-            <finalName>${project.artifactId}-${project.version}-uberjar</finalName>
+<!--               <finalName>${project.artifactId}-${project.version}-uberjar</finalName> -->
+              <shadedArtifactAttached>true</shadedArtifactAttached>
+              <shadedClassifierName>uberjar</shadedClassifierName>
               <transformers>
                 <transformer
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
