--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
     <patterntesting.version>1.4.0</patterntesting.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.6</java.version>
+    <!-- workaround for PMD, see http://jira.codehaus.org/browse/MPMD-86 -->
+    <targetJdk>1.6</targetJdk>
     <main.class>gdv.xport.Main</main.class>
   </properties>
 
@@ -184,11 +186,9 @@
 		          <linkXref>true</linkXref>
 		          <sourceEncoding>utf-8</sourceEncoding>
 		          <minimumTokens>100</minimumTokens>
-		          <targetJdk>1.6</targetJdk>
+		          <targetJdk>${java.version}</targetJdk>
                   <rulesets>
-                    <ruleset>/rulesets/java/basic.xml</ruleset>
-                    <ruleset>/rulesets/java/unusedcode.xml</ruleset>
-                    <ruleset>/rulesets/java/imports.xml</ruleset>
+                    <ruleset>${basedir}/config/pmd.xml</ruleset>
                   </rulesets>
 		        </configuration>
 		      </plugin>
