--- a/pom.xml
+++ b/pom.xml
@@ -478,6 +478,13 @@
         <role>Java Developer</role>
       </roles>
     </contributor>
+    <contributor>
+      <name>Frank Berger</name>
+      <email>Frank.Berger@talanx.com</email>
+      <roles>
+        <role>Java Developer</role>
+      </roles>
+    </contributor>
   </contributors>
   
   <scm>
