--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
 <!--               <finalName>${project.artifactId}-${project.version}-uberjar</finalName> -->
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <shadedClassifierName>uberjar</shadedClassifierName>
+              <minimizeJar>true</minimizeJar>
               <transformers>
                 <transformer
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
