--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,7 @@
 # $Id: log4j.properties,v 1.11 2009/08/11 20:20:23 oboehm Exp $
 log4j.rootLogger=INFO, STDOUT
 log4j.logger.gdv.xport=DEBUG
+log4j.logger.gdv.xport.satz=INFO
 
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
