HtmlFormatter auf Streaming-API teilweise umgestellt

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,8 @@ encoding//src/main/java=UTF-8
 encoding//src/main/java/gdv/xport/feld/Bezeichner.java=ISO-8859-1
 encoding//src/main/java/gdv/xport/satz/feld/Feld200.java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/resources/gdv/xport/util/head.html=ISO-8859-1
+encoding//src/main/resources/gdv/xport/util/tail.html=ISO-8859-1
 encoding//src/main/resources/gdv/xport/util/template.html=ISO-8859-1
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
