--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,16 @@
             </lifecycleMappingMetadata>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.14.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.17</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   
@@ -230,21 +240,6 @@
 		        </configuration>
 		      </plugin>
 		      <!-- 
-		        Cobertura
-		        see http://mojo.codehaus.org/cobertura-maven-plugin/usage.html
-		       -->
-		      <plugin>
-		        <groupId>org.codehaus.mojo</groupId>
-		        <artifactId>cobertura-maven-plugin</artifactId>
-		        <version>2.6</version>
-		        <configuration>
-		          <formats>
-		            <format>html</format>
-		            <format>xml</format>
-		          </formats>
-		        </configuration>
-		      </plugin>
-		      <!-- 
 		          findbugs
 		          start 'mvn findbugs:findbugs'
 		          http://mojo.codehaus.org/findbugs-maven-plugin/
@@ -355,7 +350,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.0.201403182114</version>
+        <version>0.7.1.201405082137</version>
         <configuration>
           <destFile>${sonar.jacoco.reportPath}</destFile>
           <append>true</append>
