major Sonar findings fixed for Main class

--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,14 @@
     <sonar.jacoco.reportPath>target/jacoco.exec</sonar.jacoco.reportPath>
 
     <!-- Sonar 4.x Violations Filter -->
-    <sonar.issue.ignore.multicriteria.1.ruleKey>squid:S1147</sonar.issue.ignore.multicriteria.1.ruleKey>
+    <!-- System.out and System.err should not be used as loggers -->
+    <sonar.issue.ignore.multicriteria.1.ruleKey>squid:S106</sonar.issue.ignore.multicriteria.1.ruleKey>
     <sonar.issue.ignore.multicriteria.1.resourceKey>**/Main.java</sonar.issue.ignore.multicriteria.1.resourceKey>
-    <sonar.issue.ignore.multicriteria>1</sonar.issue.ignore.multicriteria>
+    <!-- System.exit(...) and Runtime.getRuntime().exit(...) should not be called -->
+    <sonar.issue.ignore.multicriteria.2.ruleKey>squid:S1147</sonar.issue.ignore.multicriteria.2.ruleKey>
+    <sonar.issue.ignore.multicriteria.2.resourceKey>**/Main.java</sonar.issue.ignore.multicriteria.2.resourceKey>
+    <!-- ignore violations -->
+    <sonar.issue.ignore.multicriteria>1,2</sonar.issue.ignore.multicriteria>
 
   </properties>
 
