internal refactoring for setting up Teildatensatz

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -2,7 +2,7 @@
 log4j.rootLogger=INFO, STDOUT
 log4j.logger.gdv.xport=DEBUG
 log4j.logger.gdv.xport.satz=INFO
-log4j.logger.gdv.xport.satz.model=DEBUG
+log4j.logger.gdv.xport.satz.xml=DEBUG
 
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
