--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <!-- Sonar 4.x Violations Filter -->
     <!-- System.out and System.err should not be used as loggers -->
     <sonar.issue.ignore.multicriteria.1.ruleKey>squid:S106</sonar.issue.ignore.multicriteria.1.ruleKey>
-    <sonar.issue.ignore.multicriteria.1.resourceKey>**/Main.java</sonar.issue.ignore.multicriteria.1.resourceKey>
+    <sonar.issue.ignore.multicriteria.1.resourceKey>**/Main.java,**/*Formatter.java</sonar.issue.ignore.multicriteria.1.resourceKey>
     <!-- System.exit(...) and Runtime.getRuntime().exit(...) should not be called -->
     <sonar.issue.ignore.multicriteria.2.ruleKey>squid:S1147</sonar.issue.ignore.multicriteria.2.ruleKey>
     <sonar.issue.ignore.multicriteria.2.resourceKey>**/Main.java</sonar.issue.ignore.multicriteria.2.resourceKey>
