--- a/pom.xml
+++ b/pom.xml
@@ -545,20 +545,8 @@
   </issueManagement>
   
   <ciManagement>
-    <system>jenkins</system>
-    <url>http://miniserver07:8280/view/gdv.xport/</url>
-    <notifiers>
-      <notifier>
-        <type>mail</type>
-        <sendOnError>true</sendOnError>
-        <sendOnFailure>true</sendOnFailure>
-        <sendOnSuccess>false</sendOnSuccess>
-        <sendOnWarning>false</sendOnWarning>
-        <configuration>
-          <address>oliver.boehm@gmail.com</address>
-        </configuration>
-      </notifier>
-    </notifiers>
+    <system>Travis CI</system>
+    <url>https://travis-ci.org/oboehm/gdv.xport</url>
   </ciManagement>
   
   <mailingLists>
