--- a/service/pom.xml
+++ b/service/pom.xml
@@ -16,10 +16,12 @@
   <name>GDV-Xport-Service</name>
   <description>Service-Schnittstelle zur GDV-Xport-Lib</description>
 
+
   <dependencies>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter</artifactId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
     <dependency>
@@ -32,7 +34,9 @@
       <artifactId>spring-boot-test</artifactId>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
+
 
   <build>
     <plugins>
