--- a/service/pom.xml
+++ b/service/pom.xml
@@ -20,6 +20,12 @@
   <dependencies>
 
     <dependency>
+      <groupId>com.github.oboehm</groupId>
+      <artifactId>gdv-xport-lib</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
