validate method added and tested

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -2,6 +2,12 @@
 application:
   name:             GDV-Xport-Services
 
+logging:
+  level:
+    org:
+      springframework:  INFO
+      hibernate:        WARN
+
 spring:
   profiles:
     active:         default
