--- a/service/pom.xml
+++ b/service/pom.xml
@@ -9,11 +9,10 @@
     <version>3.0.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.github.oboehm</groupId>
   <artifactId>gdv-xport-service</artifactId>
   <packaging>jar</packaging>
 
-  <name>GDV-Xport-Service</name>
+  <name>GDV.XPort-Services</name>
   <description>Service-Schnittstelle zur GDV-Xport-Lib</description>
 
 
@@ -34,6 +33,10 @@
           <artifactId>spring-boot-starter-logging</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
 
     <dependency>
