favicon is shown now in browser

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -9,6 +9,9 @@ logging:
       hibernate:        WARN
 
 spring:
+  mvc:
+    favicon:
+      enabled:      false
   profiles:
     active:         default
 
