--- a/pom.xml
+++ b/pom.xml
@@ -345,6 +345,13 @@
         <scope>import</scope>
       </dependency>
 
+      <!-- for REST API Doc -->
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
+        <version>2.6.1</version>
+      </dependency>
+
       <!-- WebJars -->
       <dependency>
         <groupId>org.webjars</groupId>
@@ -468,7 +475,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.4</version>
+            <version>1.6</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
