--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,11 @@
         <artifactId>springfox-swagger2</artifactId>
         <version>2.6.1</version>
       </dependency>
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+        <version>2.6.1</version>
+      </dependency>
 
       <!-- WebJars -->
       <dependency>
