--- a/service/pom.xml
+++ b/service/pom.xml
@@ -57,6 +57,10 @@
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+    </dependency>
 
     <!-- WebJars -->
     <dependency>
