--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>gdv-xport</artifactId>
   <packaging>pom</packaging>
   <version>3.0.0-SNAPSHOT</version>
-  <name>GDV-Xport</name>
+  <name>GDV.XPort</name>
 
   <modules>
     <module>lib</module>
@@ -106,6 +106,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
+          <version>3.0.2</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
           <version>3.0.2</version>
         </plugin>
         <plugin>
