--- a/pom.xml
+++ b/pom.xml
@@ -253,7 +253,7 @@
           <source>${java.version}</source>
           <show>protected</show>
           <links>
-            <link>http://java.sun.com/javase/6/docs/api/</link>
+            <link>http://docs.oracle.com/javase/8/docs/api/</link>
             <link>http://www.eclipse.org/aspectj/doc/released/runtime-api</link>
             <link>http://junit.sourceforge.net/javadoc/</link>
           </links>
