--- a/pom.xml
+++ b/pom.xml
@@ -468,6 +468,14 @@
       <artifactId>oval</artifactId>
       <version>1.40</version>
     </dependency>
+    <!-- for JsonFormatter -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.8.6</version>
+      <optional>true</optional>
+    </dependency>
+
 
   </dependencies>
   
