jacoco path configured

--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,11 @@
         <groupId>org.eluder.coveralls</groupId>
         <artifactId>coveralls-maven-plugin</artifactId>
         <version>4.3.0</version>
+        <configuration>
+          <jacocoReports>
+            <jacocoReport>${sonar.jacoco.reportPath}</jacocoReport>
+          </jacocoReports>
+        </configuration>
       </plugin>
 
   	</plugins>
