--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,18 @@
 
 
   <build>
-    
-    <!-- 
+
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>META-INF/build-info.properties</include>
+        </includes>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+
+    <!--
         Dependency management for plugins which are used in different places
         in the POM.
      -->
