--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,8 @@
 /target-eclipse
 /dependency-reduced-pom.xml
 /gdv-xport.log
-/.idea/
-/gdv-xport.iml
-lib/gdv-xport.iml
-lib/target/
+**/target/
 lib/gdv-xport-lib.iml
-/service/gdv-xport-service.iml
 
 ### IntelliJ IDEA ###
 .idea
