--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -206,6 +206,11 @@
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>test</scope>
+    </dependency>
 
 	<!-- PatternTesting -->
     <dependency>
