--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,11 @@
         <artifactId>hsqldb</artifactId>
         <version>2.4.0</version>
       </dependency>
+      <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>9.4.1212.jre7</version>
+      </dependency>
 
       <!-- PatternTesting -->
       <dependency>
