--- a/service/pom.xml
+++ b/service/pom.xml
@@ -135,10 +135,9 @@
             <goals>
               <goal>build-info</goal>
             </goals>
+            <phase>generate-resources</phase>
             <configuration>
               <additionalProperties>
-                <encoding.source>${project.build.sourceEncoding}</encoding.source>
-                <encoding.reporting>${project.build.sourceEncoding}</encoding.reporting>
                 <java.source>${java.version}</java.source>
                 <java.target>${java.version}</java.target>
               </additionalProperties>
@@ -150,8 +149,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
 
