--- a/pom.xml
+++ b/pom.xml
@@ -80,14 +80,14 @@
       <resource>
         <directory>src/main/resources</directory>
         <includes>
-          <include>META-INF/build-info.properties</include>
+          <include>**/*.properties</include>
         </includes>
         <filtering>true</filtering>
       </resource>
       <resource>
         <directory>src/main/resources</directory>
         <excludes>
-          <exclude>META-INF/build-info.properties</exclude>
+          <exclude>**/*.properties</exclude>
         </excludes>
         <filtering>false</filtering>
       </resource>
