build number appended to version

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Allgemeine Informationen
 application.name=GDV-Xport-Services
-application.version=${project.version}
+application.version=${project.version}.${TRAVIS_BUILD_NUMBER}
 
 logging.level.org.springframework=INFO
 logging.level.org.hibernate=WARN
