.csv is now configured vor MediaType "text/comma-separated-values"

--- a/pom.xml
+++ b/pom.xml
@@ -421,6 +421,13 @@
         <optional>true</optional>
       </dependency>
 
+      <!-- JavaBeans Activation Framework (JAF) -->
+      <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1.1</version>
+      </dependency>
+
     </dependencies>
 
   </dependencyManagement>
