support for XML mapping added

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -47,6 +47,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+    </dependency>
 
     <!-- Spring Testing -->
     <dependency>
