--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 jdk:
   - oraclejdk8
 after_success:
-- mvn clean test jacoco:report coveralls:report
+- mvn clean integration-test jacoco:report coveralls:report
