--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
     <spring.version>1.5.6.RELEASE</spring.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
 
     <main.class>gdv.xport.Main</main.class>
 
@@ -111,11 +113,6 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.19.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>2.10.4</version>
         </plugin>
@@ -152,7 +149,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
+          <version>2.20.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.20.1</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -186,22 +188,6 @@
           see http://maven.apache.org/plugins/maven-site-plugin/examples/creating-content.html
       -->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.20.1</version>
-          <configuration>
-              <excludes>
-                  <exclude>**/Abstract*.java</exclude>
-              </excludes>
-              <systemProperties>
-                  <property>
-                      <name>gdv.VU-Nummer</name>
-                      <value>4711</value>
-                  </property>
-              </systemProperties>
-          </configuration>
-      </plugin>
-        <plugin>
         <artifactId>maven-site-plugin</artifactId>
         <version>3.6</version>
         <configuration>
@@ -209,11 +195,27 @@
           <outputEncoding>UTF-8</outputEncoding>
         </configuration>
       </plugin>
+      <!-- Unit Tests -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.20.1</version>
+        <configuration>
+          <excludes>
+            <exclude>**/Abstract*.java</exclude>
+          </excludes>
+          <systemProperties>
+            <property>
+              <name>gdv.VU-Nummer</name>
+              <value>4711</value>
+            </property>
+          </systemProperties>
+        </configuration>
+      </plugin>
       <!-- Integrations-Tests -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.20.1</version>
         <configuration>
           <!-- disable parallel execution so that JaCoCo listener can properly work -->
           <parallel>none</parallel>
