health endpoint opened

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Allgemeine Informationen
-application.name=GDV-Xport-Services
-application.version=${project.version}
+spring.application.name=GDV-Xport-Services
+spring.application.version=${project.version}
 
 logging.level.org.springframework=INFO
 logging.level.org.hibernate=WARN
@@ -10,3 +10,5 @@ spring.profiles.active=default
 
 # Port 2517 ist 0x9D5 =~ gDV
 server.port=2517
+
+endpoints.health.sensitive=false
