--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.10.4</version>
+          <version>3.0.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -587,6 +587,18 @@
     <system>Travis CI</system>
     <url>https://travis-ci.org/oboehm/gdv.xport</url>
   </ciManagement>
+
+  <!--
+      Erzeugung der Projekt-Seite
+      Aufruf: mvn site-deploy
+   -->
+  <distributionManagement>
+    <site>
+      <id>local</id>
+      <name>Projekt-Seite</name>
+      <url>file:/tmp/gdv-xport</url>
+    </site>
+  </distributionManagement>
   
   <mailingLists>
     <mailingList>
